--- a/app/views/partials/content/aboutContent.ejs
+++ b/app/views/partials/content/aboutContent.ejs
@@ -1,1 +1,61 @@
-<p>this is about page content section </p>
+<main>
+<div class="main">
+
+<div class="foodd">
+<img src="images/cheetah-425468.jpg" class="over">
+<div class="inner">
+<p class="fores">ABOUT US</p>
+
+</div>
+</div>
+
+<h1 class="head">WHO WE ARE</h1>
+
+
+<div class="cent">
+<div class="left2">
+  <h2 class="ext">SAVE ANIMALS FACING EXTINCTION</h2>
+
+
+<p>Originally established in July 2012 and supported by philanthropist Shanon Macdonals , Save Wildlife was created to support Initiative 1401, a first-of-its-kind ballot measure in New York which prohibited the purchase, sale, and distribution of products made from a list of 10 endangered animals.  Working closely with partners from the nation’s leading conservation, education, and zoological organizations, as well as grassroots donors from across the United States, I-1401 passed with over 70 percent support in December 2013.</P>
+
+<P>In 2014, Wildifw was relaunched as a 501(c)(4) social welfare, not-for-profit organization that supports policies nationwide at the state and federal levels that will protect Earth’s most precious wildlife.  The best way to protect our planet’s endangered wildlife is to ensure that strong laws are in place and that severe penalties are levied against the criminals who deal in wildlife trafficking.  Humans are the reason that so many of our most iconic and important wildlife are struggling to survive, and together, humans can work to save them.</p>
+
+<P>Despite our successes, opponents continue to block similar attempts across the country. The gun lobby and ivory dealers have killed common-sense legislation in Congress and in dozens of states which would have protected endangered wildlife. We need to fight back, and overcome the obstruction by those who wish to profit from the market of wildlife products.</p>
+</DIV>
+</DIV>
+
+
+<h1 class="head">HOW WE WORK</h1>
+
+
+<div class="cent">
+<div class="left2">
+
+<div class="missionn">
+<div class="gl"><img src="images/food2.jpg" class="gol">
+<h2 class="food"><a href="file:///Users/pkaur41/Desktop/New%20wildlife%203/New%20wildlife/food.html" class="food">FOOD</a></h2>
+</div>
+<div class="gl"><img src="images/freshwater.jpg" class="gol">
+<h2 class="water"><a href="file:///Users/pkaur41/Desktop/New%20wildlife%203/New%20wildlife/water.html" class="water">FRESH WATER</a></h2></div>
+<div class="gl"><img src="images/wildlife.jpg" class="gol">
+<h2 class="wildlife"><a href="file:///Users/pkaur41/Desktop/New%20wildlife%203/New%20wildlife/wildlife.html" class="wildlife">WILDLIFE</a></h2></div>
+<div class="gl"><img src="images/forest.jpg" class="gol">
+<h2 class="forest"><a href="file:///Users/pkaur41/Desktop/New%20wildlife%203/New%20wildlife/forest.html" class="forest">FORESTS</a></h2>
+
+</div>
+
+
+
+
+</DIV>
+</DIV>
+
+.
+
+
+
+
+
+  </div>
+  </main>
