--- a/app/views/partials/content/indexContent.ejs
+++ b/app/views/partials/content/indexContent.ejs
@@ -1,1 +1,94 @@
-<p>this is index page content section changed</p>
+
+<div class="outer2">
+<div class="thehedng">
+<img src="images/animal-1851593.jpg">
+<p class="n"><span class="bigg">SAVE WILD </span>is the largest accredited sanctury in the world dedicated entirely to abused and abondoned big cats </p>
+</div>
+</div>
+
+
+<div class="mission">
+<h2 class="miss">Save Wildlife's Mission</h2>
+<div class="gl"><img src="images/food2.jpg" class="gol">
+<h2 class="food"><a href="/food" class="food">FOOD</a></h2>
+</div>
+<div class="gl"><img src="images/freshwater.jpg" class="gol">
+<h2 class="water"><a href="/water" class="water">FRESH WATER</a></h2></div>
+<div class="gl"><img src="images/wildlife.jpg" class="gol">
+<h2 class="wildlife"><a href="/wildlife" class="wildlife">WILDLIFE</a></h2></div>
+<div class="gl"><img src="images/forest.jpg" class="gol">
+<h2 class="forest"><a href="/forest" class="forest">FORESTS</a></h2>
+
+</div>
+</div>
+
+
+<div class="subheadngs">
+  <div class="frst">
+    <img src="images/africa.jpg">
+    <h3>OUR MISSION</h3>
+    <p class="main_head">Our mission is to save
+    the endangered species</p>
+    <p class="more"><a href="/blog">More >></a></p>
+  </div>
+
+  <div class="frst">
+    <img src="images/elephant.jpg">
+    <h3>GALLERY</h3>
+    <p class="main_head">Protecting the  wildlife for healthy Planet</p>
+    <p class="more"><a href="/gallery">More >></a></p>
+  </div>
+
+  <div class="frst">
+     <img src="images/jaguar.jpg">
+     <h3>STAND WITH US</h3>
+     <p class="main_head">You can make a difference by showing love to them</p>
+      <p class="more"><a href="/donate">More >></a></p>
+  </div>
+
+  <div class="frst">
+     <img src="images/bear.jpg">
+     <h3>HOW WE WORK</h3>
+     <p class="main_head">Together we can protect life on our Planet</p>
+     <p class="more"><a href="/aboutUs">More >></a></p>
+  </div>
+
+</div>
+
+
+<!-- advertisement======= -->
+
+
+<div class="adverstmnt">
+<div class="fundraiser">
+<p class="date">30 June</p>
+<p class="join">JOIN US</p>
+<p class="fund">for a fundraiser</p>
+<p class="mission2">Our mission is to save the endangered species by fundraising</p>
+<button class="join_us">Join Now</button>
+</div>
+
+<div class="news">
+<div class="events"><h2 class="nb">News & Events</h2></div>
+<div class="category">
+<p class="number"><span class="circle">16.09</span></p>
+<p class="help">Take an Active Role</p>
+<p class="mission2">Turtles at the START Muskoka Tutle Blitz!</p>
+</div>
+
+<div class="category">
+<p class="number"><span class="circle">18.90</span></p>
+<p class="help">Help By Fundraising</p>
+<p class="mission2">Come and help raising funds for the sea animals</p>
+</div>
+
+<div class="category">
+<p class="number"><span class="circle">20.09</span></p>
+<p class="help">Start your Fundraiser</p>
+<p class="mission2">Be the HERO, Nature really Needs you.</p>
+</div>
+
+</div>
+
+
+</div>
