--- a/app/views/partials/template/footer.ejs
+++ b/app/views/partials/template/footer.ejs
@@ -1,3 +1,8 @@
 <footer>
-  <h1>this is the footer section</h1>
+
+  <h2 class="f">DO YOU HAVE ANY DOUBT</h2>
+  <p class="cont">Contact us at: </p>
+  <p class="maill">info@savewild.ca</p>
+  <p class="maill">copyright© 2017 Save Wild | All Rights Reserved</p>
+
 </footer>
