--- a/app/views/partials/template/header.ejs
+++ b/app/views/partials/template/header.ejs
@@ -1,3 +1,21 @@
 <header>
-  <h1>Header</h1>
+  <div class="outer">
+<div class="mid">
+
+<nav>
+
+
+  <ul>
+
+    <li><a href="/">Home</a></li>
+    <li><a href="/gallery">Gallery </a></li>
+        <li><a href="/blog">Blog</a></li>
+        <li><a href="/contact">Contact Us</a></li>
+        <li><a href="/aboutUs">About us</a></li>
+        <li><button class="donate"><a href="/donate">Donate</a></button></li>
+    </ul>
+</nav>
+</div>
+</div>
+
 </header>
